chore: fix flex center alignment on customer quotes (#527)

--- a/src/css/customers/quote.module.css
+++ b/src/css/customers/quote.module.css
@@ -2,7 +2,7 @@
   display: flex;
   max-width: 900px;
   margin: 0 auto;
-  flex-direction: column;
+  flex-flow: wrap;
   font-size: var(--font-size-large);
 }
 
